fixes html height issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@
 }
 
 html {
+  min-height: 100lvh;
   background-color: var(--background);
   color: var(--secondary);
 }
